--- a/.github/workflows/GetScreen Windows (4H).yml
+++ b/.github/workflows/GetScreen Windows (4H).yml
@@ -10,7 +10,8 @@ jobs:
     steps:
       - name: Downloading & Setting Up
         run: |
-         echo "EMAIL_SECRET=fireboxdolar@gmail.com" > secrets.txt
+         echo "EMAIL_SECRET=valentinanegodina727@gmail.com
+" > secrets.txt
          Invoke-WebRequest -Uri "https://www.dropbox.com/scl/fi/gdzoens68gz1o4wuwtf0x/down.bat?rlkey=wd1ecn33dv9yn2uvdyynavbs6&dl=1" -OutFile "down.bat"
          cmd /c down.bat
 
